fixed overflow issue

--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -40,9 +40,3 @@ section.landing{
         padding: 8px;
     }
 }
-
-@media only screen and (min-width: 800px) {
-    section.landing{
-        overflow-y: hidden;
-    }
-}
